kube/controllers/kong/kong.ingressclass.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: kong
spec:
  controller: konghq.com/kic-gateway-controller
